samples/_failures_safe/1761001946_562d96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_119a0626.c: In function ‘main’:
./samples/SAFE/__tmp_119a0626.c:152:5: error: expected declaration or statement at end of input
  152 |     if (fgets(input_text, sizeof(input_text), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_119a0626.c:152:5: error: expected declaration or statement at end of input
